# pool

./: .appveyor.yml  .drone.star  .travis.yml  README.md  appveyor.yml  build.jam
.drone/: drone.sh
.github/workflows/: ci.yml
doc/: index.idx  jamfile.v2  pool.qbk
doc/Doxygen/: Doxyfile
doc/Doxygen/html/: annotated.html  class_mutex.html  classboost_1_1details_1_1_p_o_dptr-members.html  classboost_1_1details_1_1_p_o_dptr.html  classboost_1_1details_1_1pool_1_1guard-members.html  classboost_1_1details_1_1pool_1_1guard.html  classboost_1_1details_1_1pool_1_1null__mutex-members.html  classboost_1_1details_1_1pool_1_1null__mutex.html  classboost_1_1fast__pool__allocator-members.html  classboost_1_1fast__pool__allocator.html  classboost_1_1fast__pool__allocator_3_01void_00_01_user_allocator_00_01_mutex_00_01_next_size_00_01_max_size_01_4-members.html  classboost_1_1fast__pool__allocator_3_01void_00_01_user_allocator_00_01_mutex_00_01_next_size_00_01_max_size_01_4.html  classboost_1_1object__pool-members.html  classboost_1_1object__pool.html  classboost_1_1pool.html  classboost_1_1pool__allocator.html  (+3 more)
example/: time_pool_alloc.cpp
include/boost/pool/: pool.hpp  (+5 more)
test/: Jamfile.v2  test_bug_1252.cpp  test_bug_2696.cpp  test_bug_3349.cpp  test_bug_4960.cpp  test_bug_54.cpp  test_bug_5526.cpp  test_bug_6701.cpp  test_gcd_lcm.cpp  test_issue_49.cpp  test_msvc_mem_leak_detection.cpp  test_poisoned_macros.cpp  test_pool_alloc.cpp  test_simple_seg_storage.cpp  test_simple_seg_storage.hpp  test_threading.cpp  track_allocator.hpp
test/test_cmake/: CMakeLists.txt  main.cpp
(+5 files in other folders)
